fixes 323 word wrap

--- a/mirage_site/static/mirage_site/css/layouts/blog.css
+++ b/mirage_site/static/mirage_site/css/layouts/blog.css
@@ -1159,6 +1159,10 @@ img.green_dot   {
     width:95px;
     text-align: left;
     padding-left:10px;
+    word-wrap:normal !important;
+}
+#ch_table td.status {
+    word-wrap:normal !important;
 }
 #ch_table th.h_naics {
     width:70px;
